examples/test/testpolicy18883.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18883
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key24: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value16
          key23: value29
          key27: value45
      podSelector:
        matchLabels:
          key14: value45
          key3: value41
          key28: value18
